Refactor VoIP call handling and update state management
- Renamed PitelCallStateEnum to VoipCallStateEnum for consistency.
- Updated call state handling in call_page.dart, call_screen.dart, voip_call.dart, and voip_service.dart to use the new VoipCallStateEnum.
- Refactored PitelSettings to VoipSettings and updated related methods in voip_service.dart and voip_client.dart.
- Changed PitelUA to VoipUA across the SIP stack, including dialog, request sender, and transaction classes.
- Introduced new PluginVoipPlugin for Android and iOS platforms to support VoIP functionality.
- Updated method signatures and internal logic to reflect the new naming conventions and ensure compatibility with the updated state management.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,4 @@
-group 'com.pitel.flutter_pitel_voip'
+group 'com.example.flutter_voip'
 version '1.0-SNAPSHOT'
 
 buildscript {
@@ -25,7 +25,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    namespace "com.pitel.flutter_pitel_voip"
+    namespace "com.example.flutter_voip"
     compileSdkVersion 33
 
     compileOptions {
