feat: Enhance VoIP example app with full functionality and permissions
- Added a new "Full VoIP App" demo showcasing push notifications and background capabilities.
- Updated README.md to include details about the new demo and its features.
- Modified AndroidManifest.xml to include necessary permissions for audio, camera, and notifications.
- Integrated permission_handler plugin for managing runtime permissions on Android and iOS.
- Updated build.gradle.kts to conditionally apply Google Services plugin based on the presence of google-services.json.
- Enhanced GeneratedPluginRegistrant.java and GeneratedPluginRegistrant.m to register the permission_handler plugin.
- Added new screens for configuration, dialing, and push debugging in the full VoIP app.
- Implemented functionality for SIP registration, call handling, and push notification management.
- Updated pubspec.yaml to include clipboard and permission_handler dependencies.
- Improved error handling and user feedback in the push notification workflow.

--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -45,5 +45,14 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>audio</string>
+        <string>voip</string>
+    </array>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>This app needs microphone access for VoIP calls.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>This app needs camera access for video calls.</string>
 </dict>
 </plist>
