--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   flutter_voip:
     path: ../
+  clipboard: ^0.1.3
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
